# yel

./: .gitignore  Cargo.toml  README.md  vercel.json
crates/yel-core/: Cargo.toml
crates/yel-core/examples/: counter_test.mxui  nested_for_test.yel  nested_parent_test.mxui  test_checkerboard.rs  test_counter.rs  test_names.rs  test_nested_for.rs  test_nested_for2.rs  test_nested_parent.rs  test_temp_converter.rs
crates/yel-core/src/: compiler.rs  context.rs  definitions.rs  diagnostic.rs  ids.rs  index_vec.rs  interner.rs  known.rs  lib.rs  source.rs  stdlib_lookup.rs
crates/yel-core/src/codegen/: lir_rust.rs  mod.rs  wit.rs  wit_ast.rs
crates/yel-core/src/codegen/wasm/: core_module.rs  expr.rs  mod.rs
crates/yel-core/src/codegen/wasm/runtime/: mod.rs  strings.rs
crates/yel-core/src/hir/: expr.rs  local_scope.rs  lower.rs  mod.rs  node.rs
crates/yel-core/src/lir/: block.rs  block_lower.rs  expr.rs  layout.rs  lower.rs  mod.rs  node.rs  signal.rs
crates/yel-core/src/syntax/: ast.rs  grammar.pest  mod.rs  parser.rs
crates/yel-core/src/thir/: expr.rs  mod.rs  node.rs  typeck.rs
crates/yel-core/src/types/: interner.rs  mod.rs
crates/yel-host/: Cargo.toml
crates/yel-host/src/: main.rs
crates/yel-host/wit/: component.wit
crates/yel-lsp/: Cargo.toml
crates/yel-lsp/src/: ast_hover.rs  completions.rs  diagnostics.rs  document.rs  hover.rs  main.rs  semantic_tokens.rs  server.rs
crates/yel-smith/: CLAUDE.md  Cargo.toml  README.md
crates/yel-smith/src/: lib.rs  main.rs
crates/yel-wasm-codegen/: Cargo.toml
crates/yel-wasm-codegen/src/: lib.rs  lir_rust.rs  wit.rs  wit_ast.rs
crates/yel-wasm-codegen/src/wasm/: core_module.rs  expr.rs  mod.rs
crates/yel-wasm-codegen/src/wasm/runtime/: list.rs  memory.rs  mod.rs
crates/yelc/: Cargo.toml
crates/yelc/src/: lib.rs  main.rs
crates/yelc/wit/: compiler.wit
editors/vscode/: .vscodeignore  esbuild.js  language-configuration.json  package-lock.json  package.json  test-error.yel  test.yel
editors/vscode/editors/vscode/: test.yel
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: mxui.tmLanguage.json
examples/counter/: Cargo.toml  Makefile  README.md  build.rs  counter.yel  wasmcloud.toml
examples/counter/src/: lib.rs
examples/counter/wit/: counter-callbacks.wit  counter.wit
scripts/: build-compiler.sh  vercel-build.sh  vercel-install.sh
yel-viewer/: .gitignore  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
yel-viewer/scripts/: vercel-build.sh  vercel-install.sh
yel-viewer/src/: App.svelte  app.css
yel-viewer/src/lib/: compiler.ts  githubDarkTheme.ts  hirData.ts  hirToTree.ts  lirData.ts  sampleData.ts  thirData.ts  thirToTree.ts  types.ts  yelLanguage.ts
yel-viewer/src/lib/compiler/: yelc.d.ts  yelc.js
yel-viewer/src/lib/compiler/interfaces/: wasi-clocks-monotonic-clock.d.ts  wasi-filesystem-types.d.ts  wasi-io-poll.d.ts  wasi-io-streams.d.ts  yel-compiler-compiler.d.ts
yel-viewer/src/lib/components/: CodeEditor.svelte  ConsolePanel.svelte  JsonNode.svelte  JsonTreeView.svelte  TreeNode.svelte  TreeView.svelte  UIPreview.svelte  WasmPreview.svelte  WastView.svelte  WitView.svelte
yel-viewer/src/lib/components/ui/badge/: badge.svelte
yel-viewer/src/lib/components/ui/button/: button.svelte
yel-viewer/src/lib/components/ui/input/: input.svelte
yel-viewer/src/lib/components/ui/resizable/: resizable-handle.svelte
yel-viewer/src/lib/components/ui/scroll-area/: scroll-area-scrollbar.svelte  scroll-area.svelte
yel-viewer/src/lib/components/ui/select/: select-trigger.svelte
yel-viewer/src/lib/components/ui/tabs/: tabs-list.svelte  tabs-trigger.svelte
yel-viewer/src/lib/preview/: dom.ts  host.ts  index.ts
yel-viewer/src/lib/preview/components/: Button.svelte  Text.svelte
