[workspace]
members = [
  "crates/yelc",
  "crates/yel-core",
  "crates/yel-host",
  "crates/yel-smith",
  "crates/yel-wasm-codegen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
# Internal crates
yel-core = { path = "crates/yel-core" }
yel-wasm-codegen = { path = "crates/yel-wasm-codegen" }

# CLI & Error handling
anyhow = "1"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Code generation (Rust)
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
prettyplease = "0.2"

# WebAssembly
wasm-encoder = "0.225"
wasmprinter = "0.225"
wit-parser = "0.225"
wit-component = "0.225"
wasm-metadata = "0.225"
wit-encoder = { version = "0.225", features = ["from-parser"] }
wit-bindgen = "0.51"
wasmtime = { version = "40", features = ["component-model"] }
wasmtime-wasi = "40"

# Utilities
semver = "1.0"
indexmap = "2.0"
parking_lot = "0.12"

# Fuzzing
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"

# Testing
pretty_assertions = "1.4"

# Build info
shadow-rs = "0.37"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
