[package]
name = "yel-core"
version.workspace = true
edition = "2021"
description = "Yel compiler core"
license.workspace = true

[dependencies]
# Parsing
pest.workspace = true
pest_derive.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Code generation
quote.workspace = true
proc-macro2.workspace = true
syn.workspace = true
prettyplease.workspace = true
wasm-encoder.workspace = true
wasmprinter.workspace = true
wit-parser.workspace = true
wit-component.workspace = true
wasm-metadata.workspace = true
wit-encoder.workspace = true
semver.workspace = true

# Utilities
indexmap.workspace = true
parking_lot.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
