[package]
name = "yel-host"
version = "0.1.0"
edition = "2021"
description = "Host runtime for testing Yel components"

[[bin]]
name = "yel-host"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "40", features = ["component-model"] }
wasmtime-wasi = "40"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
