[package]
name = "yel-host"
version.workspace = true
edition = "2021"
description = "Host runtime for testing Yel components"
license.workspace = true

[[bin]]
name = "yel-host"
path = "src/main.rs"

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
clap.workspace = true
