[package]
name = "yel-smith"
version.workspace = true
edition = "2024"
description = "Random Yel source code generator for fuzzing"
license.workspace = true

[[bin]]
name = "yel-smith"
path = "src/main.rs"

[dependencies]
arbitrary.workspace = true
anyhow.workspace = true
yel-core.workspace = true

[dev-dependencies]
libfuzzer-sys.workspace = true
