[package]
name = "yel-wasm-codegen"
version.workspace = true
edition = "2024"
description = "Yel WebAssembly code generator"
license.workspace = true

[dependencies]
yel-core.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Code generation
wasm-encoder.workspace = true
wasmprinter.workspace = true
wit-parser.workspace = true
wit-component.workspace = true
wasm-metadata.workspace = true
wit-encoder.workspace = true
semver.workspace = true

# Utilities
indexmap.workspace = true
parking_lot.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
