[package]
name = "yelc"
version.workspace = true
edition = "2024"
description = "CLI for the Yel DSL compiler"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "yelc"
path = "src/lib.rs"

[[bin]]
name = "yelc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
wasmprinter.workspace = true
yel-core.workspace = true
yel-wasm-codegen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen.workspace = true

[features]
default = []
